--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,18 @@
 {
     "compilerOptions": {
-        "baseUrl": "src",
         "declaration": true,
-        "esModuleInterop": true,
-        "jsx": "react",
-        "outDir": "./dist/",
-        "module": "commonjs",
-        "moduleResolution": "node",
+        "declarationDir": "./dist",
+        "outDir": "./dist",
         "noImplicitAny": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
+        "esModuleInterop": true,
+        "moduleResolution": "node",
+        "target": "es5",
+        "module": "es2015",
+        "typeRoots": ["./types", "./node_modules/@types"],
+        "removeComments": true,
         "sourceMap": true,
-        "strict": true,
-        "target": "es6",
-        "skipLibCheck": true
+        "lib": ["es2015", "es2017", "dom"]
     },
-    "exclude": ["node_modules/*"]
+    "include": ["src/**/*"],
+    "exclude": ["node_modules"]
 }
