--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,10 @@
         "typeRoots": ["./types", "./node_modules/@types"],
         "removeComments": true,
         "sourceMap": true,
-        "lib": ["es2015", "es2017", "dom"]
+        "lib": ["es2015", "es2017", "dom"],
+        "jsx": "react",
+        "skipLibCheck": true
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "app/**/*"],
     "exclude": ["node_modules"]
 }
