--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "query-params-data",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "description": "A React, Typescript, and Parcel boilerplate",
     "main": "./dist/index.cjs.js",
     "module": "./dist/index.es.js",
-    "types": "./dist/index.d.ts",
+    "types": "./dist/src/index.d.ts",
     "files": [
         "dist"
     ],
