--- a/package.json
+++ b/package.json
@@ -55,11 +55,14 @@
         "jest": "^25.1.0",
         "parcel-bundler": "^1.12.3",
         "prettier": "^1.18.2",
+        "react": "^16.13.0",
+        "react-dom": "^16.13.0",
         "react-test-renderer": "^16.13.0",
         "rimraf": "^3.0.2",
         "rollup": "^2.0.2",
         "rollup-plugin-eslint": "^7.0.0",
         "rollup-plugin-typescript2": "^0.26.0",
+        "styled-components": "^4.4.1",
         "ts-jest": "^25.2.1",
         "typescript": "^3.8.3"
     },
@@ -67,9 +70,6 @@
         "animejs": "^3.1.0",
         "mobx": "^5.15.4",
         "mobx-react": "^6.1.8",
-        "query-string": "^6.11.1",
-        "react": "^16.13.0",
-        "react-dom": "^16.13.0",
-        "styled-components": "^4.4.1"
+        "query-string": "^6.11.1"
     }
 }
